# DuneDog

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: affinities.json  atoms.json  beat_transitions.json  grammar_templates.json  invariants.json  neologism_templates.json  tarot_positions.json  tendencies.json  wild_cards.json
docs/: examples.md
docs/story_runs/: claude-opus-4-6.json  gemini-3-flash.json  gemini-3-pro.json
src/dunedog/: __init__.py  cli.py
src/dunedog/catalogues/: __init__.py  loader.py
src/dunedog/chaos/: __init__.py  dictionary_chaos.py  letter_soup.py  phonetics.py
src/dunedog/crystallize/: __init__.py  crystallizer.py  neologism_definer.py  semantic_clustering.py
src/dunedog/engines/: __init__.py  constraint_solver.py  evolutionary.py  markov_chains.py  tarot_spread.py
src/dunedog/llm/: __init__.py  anthropic.py  chatgpt.py  openai.py  openrouter.py  provider.py  synthesizer.py
src/dunedog/models/: __init__.py  atoms.py  config.py  results.py  skeleton.py  validation.py
src/dunedog/output/: __init__.py  batch_generator.py  exporter.py
src/dunedog/utils/: __init__.py  embeddings.py  seed_manager.py  word_loader.py  wordnet_utils.py
src/dunedog/world_rules/: __init__.py  engine.py
tests/: conftest.py  test_batch.py  test_cli.py  test_crystallizer.py  test_dictionary_chaos.py  test_e2e_live.py  test_engines.py  test_evolutionary_extended.py  test_letter_soup.py  test_llm.py  test_llm_providers.py  test_models.py  test_phonetics_extended.py  test_semantic_clustering.py  test_world_rules_extended.py
