[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dunedog"
version = "0.1.0"
description = "A stochastic story generation engine that starts from linguistic chaos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "nltk>=3.8",
    "numpy>=1.24",
    "python-Levenshtein>=0.21",
    "wordfreq>=3.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
dunedog = "dunedog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
